# automata-slsa-sigstore-verifier

./: .env.example  .gitignore  CERTIFICATE_ROTATION_GUIDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: Foundry.yml  gh-pages.yml
contracts/: .gitmodules  foundry.toml
contracts/deployments/: 1398243.json
contracts/script/: Config.s.sol  Deploy.s.sol
contracts/src/: SigstoreAttestationVerifier.sol  Types.sol
contracts/src/interfaces/: ISigstoreAttestationVerifier.sol
contracts/test/: SigstoreTest.t.sol
contracts/test/fixtures/: boundless-public.json  sp1-github.json  sp1_github.json
crates/pico/: Cargo.toml
crates/pico-host/: Cargo.toml
crates/pico-host/src/: cli.rs  config.rs  main.rs  prover.rs
crates/pico/program/: Cargo.toml
crates/pico/program/elf/: riscv32im-pico-zkvm-elf
crates/pico/program/src/: main.rs
crates/pico/src/: lib.rs
crates/risc0/: build.rs
crates/risc0-host/: Cargo.toml
crates/risc0-host/src/: cli.rs  config.rs  main.rs  prover.rs
crates/risc0-host/src/proving/: boundless.rs
crates/risc0/guest/src/: main.rs
crates/sigstore-verifier/: Cargo.toml  README.md
crates/sigstore-verifier/examples/: verify_bundle.rs  verify_bundle_with_trusted_root.rs
crates/sigstore-verifier/src/: error.rs  lib.rs
crates/sigstore-verifier/src/crypto/: mod.rs  signature.rs
crates/sigstore-verifier/src/fetcher/: mod.rs  trust_bundle.rs
crates/sigstore-verifier/src/parser/: bundle.rs  certificate.rs  identity.rs  mod.rs  rfc3161.rs
crates/sigstore-verifier/src/types/: certificate.rs  mod.rs  result.rs
crates/sigstore-verifier/src/verifier/: certificate.rs  mod.rs  rfc3161.rs  signature.rs  subject.rs  timestamp.rs  transparency.rs
crates/sigstore-verifier/tests/: integration_test.rs  parser_tests.rs
crates/sigstore-zkvm-traits/: Cargo.toml
crates/sigstore-zkvm-traits/src/: lib.rs  types.rs  utils.rs  workflow.rs
crates/sp1/: Cargo.toml  build.rs
crates/sp1-host/src/: main.rs
crates/sp1/elf/: sigstore-verifier-sp1-elf
crates/sp1/program/: Cargo.toml
crates/sp1/program/src/: main.rs
crates/sp1/src/: lib.rs
samples/: actions-attest-build-provenance-attestation-13531551.sigstore.json  actions-attest-build-provenance-attestation-13532655.sigstore.json  actions-attest-build-provenance-attestation-13581567.sigstore.json  bundle-comparison.md  fetch-cert-chain.sh
website/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts  vite.config.ts
website/components/: ChatInterface.tsx  CodeExample.tsx  CodeIntegration.tsx  GitHubIntegration.tsx  Hero.tsx  Integration.tsx  Navigation.tsx  OverviewDiagram.tsx  ProtocolOverview.tsx  Specification.tsx  ZkVerification.tsx  ZkVerifierDetails.tsx
website/services/: geminiService.ts
