[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://ata.network/"

[workspace.dependencies]

# Shared dependencies across workspace crates
serde = { version = "1.0" }
serde_json = { version = "1.0" }
base64 = { version = "0.22" }
hex = { version = "0.4" }
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
sigstore-verifier = { path = "./crates/sigstore-verifier" }

# Hash
sha2 = { version = "0.10.8" }

# ECDSA support
p256 = { version = "0.13.2" }
p384 = { version = "0.13" }
ecdsa = { version = "0.16"}

# RSA support
rsa = { version = "0.9.6" }

# Risc0 Dependencies
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0" }
risc0-zkvm = { version = "^3.0.3" }
boundless-market = { version = "^1.0" }