[workspace]
resolver = "2"
members = [
    "crates/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Automata Team"]
homepage = "https://ata.network/"
license = "MIT"

[workspace.dependencies]

# Shared dependencies across workspace crates
serde = { version = "1.0" }
serde_json = { version = "1.0" }
base64 = { version = "0.22" }
hex = { version = "0.4" }
anyhow = { version = "1.0" }
async-trait = { version = "0.1" }
sigstore-verifier = { path = "./crates/sigstore-verifier" }

# CLI and async runtime
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
dotenvy = { version = "0.15" }

# Utilities
url = { version = "2.5" }
bincode = { version = "1.3" }

# Hash
sha2 = { version = "0.10.8" }

# Ethereum ABI encoding
alloy-sol-types = { version = "1.4.1", default-features = false }

# ECDSA support
p256 = { version = "0.13.2" }
p384 = { version = "0.13" }
ecdsa = { version = "0.16"}

# RSA support
rsa = { version = "0.9.6" }

# Risc0 Dependencies
risc0-ethereum-contracts = { git = "https://github.com/risc0/risc0-ethereum", tag = "v3.0.0" }
risc0-zkvm = { version = "^3.0.3" }
boundless-market = { version = "^1.0" }

# SP1 Dependencies
sp1-sdk = { version = "5.2.1" }

# Pico Dependencies
pico-sdk = { git = "https://github.com/brevis-network/pico", branch = "main" }
p3-field = { git = "https://github.com/brevis-network/Plonky3.git", rev = "a4d376b" }