[package]
name = "sigstore-verifier"
version = { workspace = true }
edition = { workspace = true }

[features]
# Fetcher utilities for downloading trust bundles from external sources
fetcher = ["dep:reqwest"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
alloy-sol-types = { workspace = true }
x509-parser = "0.18"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
asn1-rs = "0.6"
pem = "3.0"
# ECDSA support
p256 = { workspace = true, features = ["ecdsa", "pem"] }
p384 = { workspace = true, features = ["ecdsa", "pem"] }
ecdsa = "0.16"
# RSA support
rsa = { workspace = true, features = ["sha2"] }
# HTTP client (optional, only for fetcher feature)
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
# RFC 3161 / PKCS7 support
cms = "0.2"
der = "0.7"
x509-cert = "0.2"

[[example]]
name = "verify_bundle"
required-features = ["fetcher"]
