[package]
name = "sigstore-pico-program"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
pico-sdk = { git = "https://github.com/brevis-network/pico", branch = "main" }
sigstore-verifier = { path = "../../sigstore-verifier" }
sigstore-zkvm-traits = { path = "../../sigstore-zkvm-traits" }

[patch.crates-io]
# Official Pico patch for sha2 only - p256 and rsa work without patches
sha2 = { git = "https://github.com/brevis-network/hashes", tag = "pico-patch-v1.0.1-sha2-v0.10.8" }
