[package]
name = "sigstore-sp1-program"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
sp1-zkvm = { version = "5.2.1" }
sigstore-verifier = { path = "../../sigstore-verifier" }
sigstore-zkvm-traits = { path = "../../sigstore-zkvm-traits" }

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.8-sp1-4.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-5.0.0" }
rsa = { git = "https://github.com/sp1-patches/RustCrypto-RSA", tag = "patch-0.9.6-sp1-5.0.0" }